<resources>
  <string name="app_name">Github User</string>
  <string name="avatar_user">avatar user</string>
  <string name="following">Following</string>
  <string name="followers">Followers</string>
  <string name="username">Username</string>
  <string name="location">Location</string>
  <string name="company">Company</string>
  <string name="repository">Repository</string>
  <string name="name">Name</string>
  <string name="icon_company">icon company</string>
  <string name="icon_location">icon location</string>
  <string name="logo_github">logo github</string>
  <string name="github_users">Github User\'s</string>
  <string name="detail_user">Detail User</string>
  <string name="github_user">Github User</string>

  <string name="search">Search</string>
  <string name="search_hint">Username User</string>

</resources>