<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".views.activity.DetailUserActivity">

  <LinearLayout
    android:id="@+id/identity"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/cyan_700"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/iv_avatar"
      android:layout_width="match_parent"
      android:layout_height="129.31dp"
      android:layout_gravity="center"
      android:layout_marginTop="25dp"
      android:contentDescription="@string/avatar_user"
      tools:src="@tools:sample/avatars" />

    <TextView
      android:id="@+id/tv_name"
      style="@style/TextViewBold"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="5dp"
      tools:text="@string/name"
      tools:textSize="25sp" />

    <TextView
      android:id="@+id/tv_username"
      style="@style/TextViewRegular"
      android:layout_marginTop="-5dp"
      android:layout_marginBottom="10dp"
      tools:text="@string/username" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:orientation="horizontal"
      tools:ignore="UseCompoundDrawables">

      <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_location"
        android:src="@drawable/ic_material_location_city" />

      <TextView
        android:id="@+id/tv_location"
        style="@style/TextViewRegular"
        android:layout_marginStart="5dp"
        tools:text="@string/location" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="horizontal"
      tools:ignore="UseCompoundDrawables">

      <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_company"
        android:src="@drawable/ic_material_work" />

      <TextView
        android:id="@+id/tv_company"
        style="@style/TextViewRegular"
        android:layout_marginStart="5dp"
        tools:text="@string/company" />

    </LinearLayout>


  </LinearLayout>

  <RelativeLayout
    android:id="@+id/pop_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="-35dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/shadow"
    android:orientation="horizontal"
    android:padding="10dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <ProgressBar
      android:id="@+id/progress_bar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:visibility="gone"
      tools:visibility="visible" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        style="@style/TextViewBold"
        android:text="@string/followers" />

      <TextView
        android:id="@+id/tv_followers"
        style="@style/TextViewRegular"
        tools:text="@string/followers" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:orientation="vertical">

      <TextView
        style="@style/TextViewBold"
        android:text="@string/repository" />

      <TextView
        android:id="@+id/tv_repository"
        style="@style/TextViewRegular"
        tools:text="@string/repository" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical">

      <TextView
        style="@style/TextViewBold"
        android:text="@string/following" />

      <TextView
        android:id="@+id/tv_following"
        style="@style/TextViewRegular"
        tools:text="@string/following" />
    </LinearLayout>

  </RelativeLayout>

  <LinearLayout
    android:id="@+id/tabLayout_viewPager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabs_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/view_pager"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </LinearLayout>

</LinearLayout>
